--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,5 +7,9 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock x:Name="TextField" Text="Hello" FontSize="35" HorizontalAlignment="Center" MouseEnter="TextField_MouseEnter"/>
+            <Button x:Name="Button" Content="Press me" FontSize="30" Click="Button_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
